--- a/hj-react-app/package.json
+++ b/hj-react-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.21",
+    "@ice/stark-app": "^1.5.0",
     "@loadable/component": "^5.15.0",
     "ahooks": "^2.10.6",
     "antd": "^4.16.3",
