--- a/hj-react-app/package.json
+++ b/hj-react-app/package.json
@@ -55,7 +55,8 @@
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "typescript": "^4.3.4",
-    "vite": "^2.3.8",
+    "vite-plugin-index-html": "^2.0.1",
+    "vite": "^2.7.2",
     "vite-plugin-style-import": "^1.0.0"
   },
   "resolutions": {
